# cv-mmap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  opencv.rb
client/: test_cvmmap.py  test_zmq.py
client/cvmmap/: __init__.py  msg.py  shm.py
src/: main.cpp
